# ResuMess

./: .gitignore  README.md  pyproject.toml
docs/: CHANGES.md  feature-ats-checker.md  feature-jd-intelligence.md  feature-latex-engine.md  feature-sop-cover-letter.md  feature-template-integration.md  feature-ui.md  feature-user-context-space.md  feature-versioning-test-guardrails.md  feature-versioning.md  latex-pylatex-overleaf.md  latex-ui-contract.md  ui-latex-integration.md
scripts/: run_versioning_guardrails.sh
src/resumess/: __init__.py  api.py  latex_engine.py
src/resumess/artifacts/doc_1dc02608534c/: resume.tex
src/resumess/artifacts/doc_ec57c8f58d7d/: resume.tex
tests/security/: test_no_unsafe_patterns.py
tests/versioning/: test_versioning_merge_guardrail.py
ui/: README.md  app.js  index.html  styles.css
