[project]
name = "resumess"
version = "0.1.0"
description = "Intelligent resume automation with LaTeX generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pylatex>=1.4.2",
	"fastapi>=0.104.0",
	"uvicorn>=0.24.0",
	"pydantic>=2.0",
	"python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.4",
	"pytest-asyncio>=0.21",
	"httpx>=0.25",
]
